--- a/OpenCV.ipynb
+++ b/OpenCV.ipynb
@@ -36,7 +36,7 @@
         "id": "IICc5fb7vSFg",
         "outputId": "1fabb78a-ab8b-4fa9-9508-f8ee36b219ab"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "_ohM9u_UcWtu"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "id": "TFVA3r4LezX5",
         "outputId": "c2d26078-d892-41a1-a45c-da5320d06100"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -145,7 +145,7 @@
         "id": "9BmhXxHEezaV",
         "outputId": "7127fd19-5483-43ba-bc14-00e2a97ae8c0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,6 +155,50 @@
             "A altura da imagem1 é 600 e a altura da imagem2 é 600\n",
             "A largura da imagem1 é 600 e a largura da imagem2 é 600\n",
             "O número de canais da imagem1 é 3 e o número de canais da imagem2 é 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Verificando cores da imagem"
+      ],
+      "metadata": {
+        "id": "xoDPHpjeE_68"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b1, g1, r1 = cv.split(img1)\n",
+        "b2, g2, r2 = cv.split(img2)\n",
+        "# Verificando a cor b da imagem\n",
+        "print('A quantidade de elementos diferente de zero na matriz da imagem1 é de {} e na imagem2 é de {}'\n",
+        "      .format(cv.countNonZero(b1),cv.countNonZero(b2)))\n",
+        "# Verificando a cor g da imagem\n",
+        "print('A quantidade de elementos diferente de zero na matriz da imagem1 é de {} e na imagem2 é de {}'\n",
+        "      .format(cv.countNonZero(g1),cv.countNonZero(g2)))\n",
+        "# Verificando a cor r da imagem\n",
+        "print('A quantidade de elementos diferente de zero na matriz da imagem1 é de {} e na imagem2 é de {}'\n",
+        "      .format(cv.countNonZero(r1),cv.countNonZero(r2)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F15f27HpFCgh",
+        "outputId": "b8790472-23c2-496c-a29b-350ad908c5b5"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A quantidade de elementos diferente de zero na matriz da imagem1 é de 330443 e na imagem2 é de 360000\n",
+            "A quantidade de elementos diferente de zero na matriz da imagem1 é de 360000 e na imagem2 é de 360000\n",
+            "A quantidade de elementos diferente de zero na matriz da imagem1 é de 360000 e na imagem2 é de 360000\n"
           ]
         }
       ]
@@ -195,7 +239,7 @@
       "metadata": {
         "id": "svcFaTzDezf9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +255,7 @@
         "id": "JIrPjFmLezi9",
         "outputId": "04a69f82-c0cb-4543-e80c-866268e6505c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +285,7 @@
       "metadata": {
         "id": "GwJsbFpplYN5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     }
   ]
